[package]
name = "mser"
version = "0.1.0"
authors = ["FinleyG <finley.garton@housesimple.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
juniper = "0.14"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"